change footer address colour to blue

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="col-md-5">@ copywrite Jesus my saviour 2016.</div>
 
   <h4>Contact Manager</h4>
-  <address >
+  <div class= "add">
     203 Saxon Street <br>
     Broadline Way <br>
     Milton Keynes <br>
@@ -45,7 +45,7 @@
       01908 358154 <br>
       fax: 0044 748956230 <br>
     </p>
-  </address>
+  </div>
   <div class="col-md-7">
             <ul class="footnav">
             <li><a href="index.html">home</a></li>
