--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,37 @@
 
 
   </body>
+  <footer class="foot">
+    <div class="container">
+    <div class="row">
+      <p> <i>Acess information below:</i></p>
+    <div class="bottom-foot">
+    <div class="col-md-5">@ copywrite Jesus my saviour 2016.</div>
 
+    <h4>Contact Manager</h4>
+    <div class= "add">
+      203 Saxon Street <br>
+      Broadline Way <br>
+      Milton Keynes <br>
+      MK6 8PZ <br>
+      <p>Telephone:<br>
+        01908 358154 <br>
+        fax: 0044 748956230 <br>
+      </p>
+    </div>
+    <div class="col-md-7">
+              <ul class="footnav">
+              <li><a href="index.html">home</a></li>
+              <li><a href="cv.html">cv</a></li>
+              <li><a href="bio.html">bio</a></li>
+              <li><a href="contact.html">contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </footer>
+  <!--footer ends-->
 
 </html>
