--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
   </head>
   <body>
-
+<header>
+</header>
   <div class="flex-container-nav">
         <ul class="ul-nav">
           <li class="li-nav"><a class="nav-link" href="index.hmtl">Home</a></li>
