--- a/cv.html
+++ b/cv.html
@@ -21,17 +21,21 @@
     <p>
       <h3>Personal Profile:</h3>
     </p>
+    <div class="cities">
 <h5>I am very hardworking person who likes to complete tasks to the best of my ability. I have always been honest, trustworthy to any business entity which improves existing performance. My determination, loyalty, contributions and relationship building have become did not only become a strength but to achieve organisation goals and objectives. I can easily adapt to different surroundings and capable of following instructions, preforming duties and completing them at a given period of time.</h5>
-<p>
+
+  </div>
+
   <h3>Skills and Abilities:</h3>
+    <div class="cities">
   <h5>	Communication: I have strong communication, skills building rapport with customers to explore needs and recommending what can become beneficial. I have promotes world class customers score and keeping confidential information in previous jobs.<br>
 	Team Work: I do believe two always can be better than one and effort from collegues can put business into a higher standard. <br>
 	Numeracy: I perform duties like banking and other expenses to update head office of any transaction operated within the region.<br>
 	Business awareness: I have been trained about how business operates; keeping customers in the heart and observing health and safety rules. <br>
 </h5>
-</p>
-<p>
+</div>
   <h3>Work Exprience:</h3>
+  <div class="cities">
   <h5>
   Senior Customer Consultant (Dixons Carphone)  (june 2012- January 2017): <br>
 	Helping customers’ needs through telephone communication.<br>
@@ -40,9 +44,9 @@
 	Stock control: Checking new stock received in store and checking previous quantities. <br>
 	Deliveries: making sure items delivered in store matches with the paper work. <br>
 </h5>
-</p>
-<p>
+</div>
   <h3>Education: </h3>
+  <div class="cities">
   <h5>University of Northampton BSc(Eng) Computing (September2016- September2019) <br>
 Software Engineering <br>
 Computer Systems <br>
@@ -50,7 +54,8 @@ Networking <br>
 Web-development <br>
 Data-base <br>
 </h5>
-</p>
+</div>
+
   </section>
 
   </body>
